增加使用lib来生成证书的代码。