@@ -1,6 +1,8 @@
-import com.aobin.CertificateVerify;
+package certificate;
+
+import cn.hutool.core.codec.Base64;
+import com.aobin.certificate.CertificateVerify;
 import org.junit.Test;
-import sun.misc.BASE64Decoder;
 
 import java.io.*;
 import java.security.*;
@@ -19,8 +21,8 @@ public class CertificateVerifyTest {
     @Test
     public void validateCertificateChainSuccess() throws IOException, CertificateException, NoSuchAlgorithmException, InvalidKeySpecException {
         final CertificateFactory certificateFactory = CertificateFactory.getInstance("X.509");
-//        final File file = new File(CertificateVerifyTest.class.getClassLoader().getResource("server.cer").getFile());
-//        final File file = new File(CertificateVerifyTest.class.getClassLoader().getResource("server1.cer").getFile());
+//        final File file = new File(certificate.CertificateVerifyTest.class.getClassLoader().getResource("server.cer").getFile());
+//        final File file = new File(certificate.CertificateVerifyTest.class.getClassLoader().getResource("server1.cer").getFile());
         String certificateStr = "-----BEGIN CERTIFICATE-----\nMIID1jCCAb4CCQDO0oD3WvNjDDANBgkqhkiG9w0BAQUFADBvMQswCQYDVQQGEwJD\nTjETMBEGA1UECAwKbXlwcm92aW5jZTEPMA0GA1UEBwwGbXljaXR5MRcwFQYDVQQK\nDA5teW9yZ2FuaXphdGlvbjEQMA4GA1UECwwHbXlncm91cDEPMA0GA1UEAwwGbXlu\nYW1lMB4XDTIxMDYxNjEzMTk0M1oXDTIxMDYxNzEzMTk0M1owbzELMAkGA1UEBhMC\nQ04xEzARBgNVBAgMCm15cHJvdmluY2UxDzANBgNVBAcMBm15Y2l0eTEXMBUGA1UE\nCgwObXlvcmdhbml6YXRpb24xEDAOBgNVBAsMB215Z3JvdXAxDzANBgNVBAMMBm15\nbmFtZTCBnzANBgkqhkiG9w0BAQEFAAOBjQAwgYkCgYEAtG5lgcMrvvMz54velM1n\nZjMMVfwpZITTwYie30ZkvUZSN+SmJ7I5QVjLJclTMOFXxJyHwHMGkBMR9A1B9per\nogR/QRtFVUPVYvQhI7ihmrb90bFrVg34jqJ6Ontaa+okGfgAXmCSBOnYoc0Rd/eJ\nBFy+ymaxIEXYiNbj5Xbz2DUCAwEAATANBgkqhkiG9w0BAQUFAAOCAgEAPkuUfndW\nWwDgndhCZ9ctCHUoek/yu0EnLbAIFbbBMboZvzUTRtcyUePQDFNO6Hjt4SjtR5M4\nq3xG8FTu8+cAR1vTe30qTRuLWx2N/JpiNQk+FqkvZNVLXMKa3obIYPgkKDusmsuf\nV5pl1RsvMZ3BC9fWJtV/B8MHcS+n4LpXp3tbMoig5CSM1XddVB+RE7JkMhrZxkFk\neJnzHlhnMnDHuPcfvYgcWNxy8+rebzlga/GBjO2RI9HAZaZvKMp93rtr95FTRpgg\niYUrsz3hqXrKSfx1idAAgORItyvqXcaX7APhOh8aiVKL0OrjiriXv4PHi6ot33I/\nRAvORAYhraxPa4f92VBgND0T0Fd15iLspvj9YjfvwrjVQFBu1l0bIFvJCvt45YLx\nMuLq+rKZrEyNkQbazupzGxk1DN6Ay5Oueo/jh+95ct75EeFDVrNoW81PFwIc7Kwj\nXJ472AVjwpu0qljlrKro17nhECiAy/xg7sDibXidBaTaQkJDJGbRdUYMxV54gdo+\nAIw3whP/XZObptVdlE+5o138QRRSldSSpoRZKtutI03R81TVWjEESyqwVU0UixUR\ndKB+yVcCD4Bfiwbd/GFCavpO6oUauU96hjw6JaXdGmC7o+dqjgI9Zlgpria/AyVB\nl9VntVPmd0RMjRHLOFcfqql5ZV9DOw31v/4=\n-----END CERTIFICATE-----\n";
 //        final FileInputStream fileInputStream = new FileInputStream(file);
 //        final X509Certificate x509Certificate = (X509Certificate) certificateFactory.generateCertificate(fileInputStream);
@@ -46,7 +48,7 @@ public class CertificateVerifyTest {
 
     private PublicKey getPublicKey() throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
         File f = new File(CertificateVerifyTest.class.getClassLoader().getResource("public-key").getFile());
-//        File f = new File(CertificateVerifyTest.class.getClassLoader().getResource("public-key1").getFile());
+//        File f = new File(certificate.CertificateVerifyTest.class.getClassLoader().getResource("public-key1").getFile());
         FileInputStream fis = new FileInputStream(f);
         DataInputStream dis = new DataInputStream(fis);
         byte[] keyBytes = new byte[(int) f.length()];
@@ -57,8 +59,8 @@ public class CertificateVerifyTest {
         String publicKeyPEM = temp.replace("-----BEGIN PUBLIC KEY-----\n", "");
         publicKeyPEM = publicKeyPEM.replace("-----END PUBLIC KEY-----", "");
 
-        BASE64Decoder b64 = new BASE64Decoder();
-        byte[] decoded = b64.decodeBuffer(publicKeyPEM);
+
+        byte[] decoded = Base64.decodeStr(publicKeyPEM).getBytes();
 
         X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
         KeyFactory kf = KeyFactory.getInstance("RSA");
@@ -83,3 +85,17 @@ public class CertificateVerifyTest {
 
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
